err/modelpai.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/modelpai'...
Listing './lib/python3.5/site-packages/modelpai/oss'...
Compiling './lib/python3.5/site-packages/modelpai/oss/oss_api.py'...
***   File "./lib/python3.5/site-packages/modelpai/oss/oss_api.py", line 1042
    print '\r%d%% ' % (rate_num),
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modelpai/oss/oss_sample.py'...
***   File "./lib/python3.5/site-packages/modelpai/oss/oss_sample.py", line 17
    print "request_id:%s, %s OK, cost:%s ms" % (request_id, msg, cost)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modelpai/oss/oss_util.py'...
***   File "./lib/python3.5/site-packages/modelpai/oss/oss_util.py", line 152
    print "format_unixtime:%s exception, %s, %s" % (osstimestamp, sys.exc_info()[0], sys.exc_info()[1])
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modelpai/oss/oss_xml_handler.py'...
***   File "./lib/python3.5/site-packages/modelpai/oss/oss_xml_handler.py", line 76
    print "Code: %s\nMessage: %s\nResource: %s\nRequestId: %s \nHostId: %s" % (self.code, self.msg, self.resource, self.request_id, self.host_id)
                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modelpai/osscmd.py'...
***   File "./lib/python3.5/site-packages/modelpai/osscmd.py", line 148
    print "Error Headers:\n"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/modelpai-0.0.34.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
